--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,7 +11,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="en" class="dark">
-	<head class="min-h-screen bg-white dark:bg-gray-900 text-black dark:text-white">
+	<head class="bg-white dark:bg-gray-900 text-black dark:text-white">
 		<BaseHead title={title} description={description} />
 	</head>
 
