--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/BlogPost.astro";
 ---
 
 <Layout
-  title="Mi porfolio"
+  title="Mi porfolio aaa"
   description="Holaaa este es mi porfolio"
   pubDate={new Date("August 08 2021")}
   heroImage="/banner.webp"
