--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,7 +15,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 	</head>
 
-	<body class="min-h-screen bg-white dark:bg-gray-900 text-black dark:text-white">
+	<body class="bg-white dark:bg-gray-900 text-black dark:text-white">
 		<Header />
 		<main>
 			<article>
