--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,4 +11,7 @@ import Layout from "../layouts/BlogPost.astro";
   description="Holaaa este es mi porfolio"
   pubDate={new Date("August 08 2021")}
   heroImage="/banner.webp"
-></Layout>
+  <BaseHead
+  title="Titulo base head"
+/>
+>
